First experimental commit to test the split update site structures.
Upgraded version to 1.0.3.
Minor renaming for Forge refresh->configure.
Added programmatic update site add to work around helios subversive bug.
Split egit, subclipse and subversive into separate optional installable features with the real SCM plugin dependencies.

--- a/com.cloudbees.eclipse.dev.ui/plugin.xml
+++ b/com.cloudbees.eclipse.dev.ui/plugin.xml
@@ -195,7 +195,7 @@
               enablesFor="1"
               icon="icons/epl/refresh.png"
               id="com.cloudbees.eclipse.dev.ui.action.reload"
-              label="Refresh">
+              label="Reload">
         </action>
      </objectContribution>
      <objectContribution
@@ -216,7 +216,7 @@
               class="com.cloudbees.eclipse.dev.ui.actions.ReloadForgeReposAction"
               icon="icons/epl/refresh.png"
               id="com.cloudbees.eclipse.dev.ui.action.reloadForge"
-              label="Refresh">
+              label="Configure Forge repos...">
         </action>
      </objectContribution>
      <objectContribution
