--- a/com.cloudbees.eclipse.dev.scm.subversive/.settings/org.eclipse.jdt.core.prefs
+++ b/com.cloudbees.eclipse.dev.scm.subversive/.settings/org.eclipse.jdt.core.prefs
@@ -1,4 +1,4 @@
-#Wed Mar 23 14:39:08 EET 2011
+#Tue Jun 07 23:26:15 EEST 2011
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.inlineJsrBytecode=enabled
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.6
