--- a/com.cloudbees.eclipse.updatesite-feature/build.properties
+++ b/com.cloudbees.eclipse.updatesite-feature/build.properties
@@ -8,10 +8,10 @@ category.id.com.cloudbees.eclipse.subversive.cat=CloudBees Forge SVN Support (Su
 category.members.com.cloudbees.eclipse.subversive.cat=com.cloudbees.eclipse.dev.scm.subversive
 category.description.com.cloudbees.eclipse.subversive.cat=CloudBees Forge SVN Support (Subversive, **Subsersive must be installed!!**) (Optional)
 
-category.id.com.cloudbees.eclipse.subclipse.cat=CloudBees Forge SVN Support, Optional (Subclipse, **Subclipse must be installed!!**) (Optional)
+category.id.com.cloudbees.eclipse.subclipse.cat=CloudBees Forge SVN Support (Subclipse, **Subclipse must be installed!!**) (Optional)
 category.members.com.cloudbees.eclipse.subclipse.cat=com.cloudbees.eclipse.dev.scm.subclipse
 category.description.com.cloudbees.eclipse.subclipse.cat=CloudBees Forge SVN Support (Subclipse, **Subclipse must be installed!!**) (Optional)
 
-category.id.com.cloudbees.eclipse.egit.cat=CloudBees Forge GIT Support (** eGIT be installed!!**) (Optional)
+category.id.com.cloudbees.eclipse.egit.cat=CloudBees Forge GIT Support (** eGIT must be installed!!**) (Optional)
 category.members.com.cloudbees.eclipse.egit.cat=com.cloudbees.eclipse.dev.scm.egit
-category.description.com.cloudbees.eclipse.egit.cat=CloudBees Forge GIT Support (** eGIT be installed!!**) (Optional)
+category.description.com.cloudbees.eclipse.egit.cat=CloudBees Forge GIT Support (** eGIT must be installed!!**) (Optional)
