Simplified the categories

--- a/com.cloudbees.eclipse.updatesite-feature/build.properties
+++ b/com.cloudbees.eclipse.updatesite-feature/build.properties
@@ -1,17 +1,4 @@
 bin.includes = feature.xml
-
-category.id.com.cloudbees.eclipse.main.cat=CloudBees Eclipse Toolkit (Required)
-category.members.com.cloudbees.eclipse.main.cat=com.cloudbees.eclipse
-category.description.com.cloudbees.eclipse.main.cat=CloudBees Eclipse Toolkit (Required)
-
-category.id.com.cloudbees.eclipse.subversive.cat=CloudBees Forge SVN Support (Subversive, **Subsersive must be installed!!**) (Optional)
-category.members.com.cloudbees.eclipse.subversive.cat=com.cloudbees.eclipse.dev.scm.subversive
-category.description.com.cloudbees.eclipse.subversive.cat=CloudBees Forge SVN Support (Subversive, **Subsersive must be installed!!**) (Optional)
-
-category.id.com.cloudbees.eclipse.subclipse.cat=CloudBees Forge SVN Support (Subclipse, **Subclipse must be installed!!**) (Optional)
-category.members.com.cloudbees.eclipse.subclipse.cat=com.cloudbees.eclipse.dev.scm.subclipse
-category.description.com.cloudbees.eclipse.subclipse.cat=CloudBees Forge SVN Support (Subclipse, **Subclipse must be installed!!**) (Optional)
-
-category.id.com.cloudbees.eclipse.egit.cat=CloudBees Forge GIT Support (** eGIT must be installed!!**) (Optional)
-category.members.com.cloudbees.eclipse.egit.cat=com.cloudbees.eclipse.dev.scm.egit
-category.description.com.cloudbees.eclipse.egit.cat=CloudBees Forge GIT Support (** eGIT must be installed!!**) (Optional)
+category.id.com.cloudbees.eclipse.cat=CloudBees Eclipse Toolkit
+category.members.com.cloudbees.eclipse.cat=com.cloudbees.eclipse,com.cloudbees.eclipse.dev.scm.subversive,com.cloudbees.eclipse.dev.scm.subclipse,com.cloudbees.eclipse.dev.scm.egit
+category.description.com.cloudbees.eclipse.cat=CloudBees Eclipse Toolkit
