Fix for: Clicking on "Start on RUN@cloud" gives error. Moved start to a non-blocking job as the api call was blocking and it was better to let start hibernated app in the background. Pending discussion, possibly not final.
Improved wording for Reload menuitems. (incl refresh renamed to reload whenever server was involved)

--- a/com.cloudbees.eclipse.dev.ui/plugin.xml
+++ b/com.cloudbees.eclipse.dev.ui/plugin.xml
@@ -195,7 +195,7 @@
               enablesFor="1"
               icon="icons/epl/refresh.png"
               id="com.cloudbees.eclipse.dev.ui.action.reload"
-              label="Reload">
+              label="Reload DEV@cloud Jenkins instances@">
         </action>
      </objectContribution>
      <objectContribution
